spacing fix

--- a/src/app/style/scss/style.scss
+++ b/src/app/style/scss/style.scss
@@ -10802,3 +10802,8 @@ Responsiveness Start
   background-color: transparent !important;
   color: var(--bs-white) !important;
 }
+
+
+.Toastify{
+  padding: 0;
+}
